[package]
name = "graph_rewriter"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { version = "0.5.1", features = ["serde-1"] }
rand = "0.8.3"
serde = {version = "1", features = ["derive", "rc"]}
indexmap = { version = "1", features = ["serde-1"] }
typetag = "0.1.7"
palette = "0.5.0"
